# cmakeTut

./: CMakeLists.txt
src/: game.c  game.h  main.c  sprite.c  window.c  window.h
